# Datalake_with_spark_delta_and_iceberg

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  spark_delta.ipynb
spark-iceberg/: pyproject.toml
spark-iceberg/src/spark_iceberg/: spark-iceberg.ipynb
spark-iceberg/src/spark_iceberg/spark-warehouse/iceberg/livros_iceberg/data/: 00000-16-f1fe90e1-c99a-486e-84ca-ffb3315bfa6e-0-00001.parquet  00001-10-13b34b05-1ece-4f31-b871-5e6d53e0416c-0-00001.parquet  00002-11-13b34b05-1ece-4f31-b871-5e6d53e0416c-0-00001.parquet
spark-iceberg/src/spark_iceberg/spark-warehouse/iceberg/livros_iceberg/metadata/: .6ebaa50e-91f6-401e-8f1b-73adc600c284-m0.avro.crc  .c3d6b23d-a02a-427b-a534-094aa6482e0f-m0.avro.crc  .c3d6b23d-a02a-427b-a534-094aa6482e0f-m1.avro.crc  .d1a12611-cc72-4362-9bd4-ae43a47ff881-m0.avro.crc  .snap-2045252087570850566-1-6ebaa50e-91f6-401e-8f1b-73adc600c284.avro.crc  .snap-3563589021711039481-1-d1a12611-cc72-4362-9bd4-ae43a47ff881.avro.crc  .snap-821127310236840045-1-c3d6b23d-a02a-427b-a534-094aa6482e0f.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  .v3.metadata.json.crc  .v4.metadata.json.crc  6ebaa50e-91f6-401e-8f1b-73adc600c284-m0.avro  c3d6b23d-a02a-427b-a534-094aa6482e0f-m0.avro  c3d6b23d-a02a-427b-a534-094aa6482e0f-m1.avro  d1a12611-cc72-4362-9bd4-ae43a47ff881-m0.avro  snap-2045252087570850566-1-6ebaa50e-91f6-401e-8f1b-73adc600c284.avro  snap-3563589021711039481-1-d1a12611-cc72-4362-9bd4-ae43a47ff881.avro  snap-821127310236840045-1-c3d6b23d-a02a-427b-a534-094aa6482e0f.avro  v1.metadata.json  v2.metadata.json  v3.metadata.json  v4.metadata.json
(+42 files in other folders)
