[project]
name = "datalake-with-spark-and-iceberg"
version = "0.1.0"
description = ""
authors = [
    {name = "Arturo Burigo",email = "burigoarturo3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (==3.4.2)",
    "delta-spark (==2.4.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
