[project]
name = "datalake-with-spark-and-iceberg"
version = "0.1.0"
description = ""
authors = [
    {name = "Arturo Burigo",email = "burigoarturo3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "delta-spark (>=3.0.0,<4.0.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "mkdocs (>=1.5.0,<2.0.0)",
    "mkdocs-material (>=9.0.0,<10.0.0)",
    "mkdocstrings (>=0.24.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
